# blockcode

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/data/: bar.txt  foo.txt
demo/src/: main.cc
include/: BlockCode.hh  Decoder.hh  Encoder.hh  FileUtil.hh  Partitioner.hh
src/: Decoder.cc  Encoder.cc  main.cc
